chore: add validate only to create shortcut
